feat: add serialization
Signed-off-by: Andre Mello <andre.tgmello@gmail.com>

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
