--- a/src/plot/Project.toml
+++ b/src/plot/Project.toml
@@ -1,6 +1,8 @@
 [deps]
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
