--- a/src/calc/Project.toml
+++ b/src/calc/Project.toml
@@ -5,6 +5,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
+Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 ParameterizedFunctions = "65888b18-ceab-5e60-b2b9-181511a3b968"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
