--- a/src/plot/Project.toml
+++ b/src/plot/Project.toml
@@ -8,6 +8,7 @@ Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 JLSO = "9da8a3cd-07a3-59c0-a743-3fdc52c30d11"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
