--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,14 @@
 
 # Ignore helper bash scripts
 *.sh
+
+# But not the main one
 !run.sh
 
-# Ignore data and plots
+# Ignore notebooks and data folder
+notebooks
 data/
 
-# But not serialized results
-!*.jlso
+# But not main results
+!data/results/results_all/
+!data/results/results_lvp/
